# Calypso

./: .clang-format  .gdb_history  .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  LICENSE  README.md  flake.nix  todo.txt
client/: CMakeLists.txt
client/config/: config.cmake
client/include/: aarch64  agl  al  eui  game  nn  nvn  nvnTool  sead  vapours
client/include/custom/nn/: nifm_ip.h
client/lib/custom/sead/prim/: seadRuntimeTypeInfo.h
client/src/: CMakeLists.txt  hooks.cpp  main.cpp  main.h  menu.cpp  menu.h  menuitem.cpp  menuitem.h  server.cpp  server.h  tas.cpp  tas.h  util.cpp  util.h
client/src/hooks/: basic.cpp  fs.cpp  hooks.cpp  hooks.h  server.cpp  tas.cpp
client/syms/al/: actor.sym  controller.sym  memory.sym  nerve.sym  scene.sym  string.sym  thread.sym
client/syms/nn/: err.sym  init.sym  mem.sym  nifm.sym  settings.sym  socket.sym
client/syms/sead/: basis.sym  controller.sym  filedevice.sym  gfx.sym  heap.sym  math.sym
client/syms/smo/: main.sym  player.sym
config/: config.cmake  npdm.json
doc/: design.txt  format_v0.txt  format_v1-BETA.txt  internal_format.txt  smo_format_v0-BETA.txt
lib/custom/al/Project/Controller/: PadUiKeyInputAddon.h
lib/custom/game/Layout/: MapMini.h
lib/custom/nn/: hid.h  xcd.h
lib/custom/sead/controller/nin/: seadNinJoyNpadDevice.h
lib/custom/sead/framework/nx/: seadGameFrameworkNx.h
lib/custom/sead/prim/: seadDelegate.h
scripts/: build.py
server/: CMakeLists.txt  Cargo.toml  build.rs  index.html  main.cpp  run.py
server/examples/: checker.rs
server/include/hk/: Result.h  ValueOrResult.h  types.h
server/include/hk/detail/: DefaultResults.ih
server/include/hk/diag/: diag.h  results.h
server/include/hk/util/: Lambda.h  Math.h  TemplateString.h
server/src/: BinaryReader.cpp  BinaryReader.h  CMakeLists.txt  InputDisplayWidget.cpp  InputDisplayWidget.h  LogWidget.cpp  LogWidget.h  MainWindow.cpp  MainWindow.h  ScriptSTAS.cpp  ScriptSTAS.h  Server.cpp  Server.h  config.rs  input_display.rs  main.cpp  main.rs  main_old.rs  reader.cpp  reader.h  results.h  script_sender.rs  server.rs  tracked_value.rs  types.h  util.cpp  util.h
server/src/hk/: diag.cpp
server/src/server/: mod.rs  protocol.rs
server/src/ui/: game_info.rs  input_display.rs  mod.rs  piano.rs  script_info.rs  tools.rs
server/ui/: hello.slint  main.slint
server/web/: index.html  main.js
src/: main.cpp  mem.cpp  menu.cpp  menu.h  menuitem.cpp  menuitem.h  server.cpp  server.h  tas.cpp  tas.h  util.h
syms/: memory.sym  nvn.sym
syms/al/: audio.sym  controller.sym  thread.sym
syms/nn/: fs.sym  hid.sym  nifm.sym  os.sym  socket.sym
syms/sead/: basis.sym  container.sym  controller.sym  gfx.sym  heap.sym  prim.sym
syms/smo/: demo.sym  main.sym
tas-script-formats/: Cargo.toml
tas-script-formats/examples/: balls.rs
tas-script-formats/src/: internal.rs  lib.rs  lunakit.rs  nxtas.rs  stas.rs  tsvtas.rs  util.rs
tools/: build.py  convert_script.py  meow.py  util.py
