[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
async-compat = "0.2.5"
directories = "6.0.0"
futures-util = "0.3.32"
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
slint = { version = "1.15", features = ["raw-window-handle-06"] }
tokio = { version = "1.51.1", features = ["macros", "net", "sync"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[build-dependencies]
slint-build = "1.15"
