[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
async-compat = "0.2.5"
directories = "6.0.0"
eyre = "0.6.12"
futures-util = "0.3.32"
num-derive = "0.4.2"
num-traits = "0.2.19"
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
slint = { version = "1.15", features = ["raw-window-handle-06"] }
tas-script-formats = { version = "0.1.0", path = "../tas-script-formats" }
tiny-skia = "0.12.0"
tokio = { version = "1.51.1", features = ["io-util", "macros", "net", "sync"] }
tokio-util = "0.7.18"
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
zerocopy = { version = "0.8.48", features = ["derive"] }

[build-dependencies]
slint-build = "1.15"
