[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
bitfield-struct = "0.13.0"
directories = "6.0.0"
eframe = { version = "0.34.2", features = ["wgpu"] }
egui_dock = "0.19.1"
eyre = "0.6.12"
futures-util = "0.3.32"
heapless = "0.9.3"
num-derive = "0.4.2"
num-traits = "0.2.19"
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
tas-script-formats = { version = "0.1.0", path = "../tas-script-formats" }
tiny-skia = "0.12.0"
tokio = { version = "1.51.1", features = ["io-util", "macros", "net", "rt", "sync", "time"] }
tokio-util = "0.7.18"
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
zerocopy = { version = "0.8.48", features = ["derive"] }

[dev-dependencies]
rayon = "1.12.0"
